[gd_scene load_steps=23 format=2]

[ext_resource path="res://resources/tilesets/town_tileset.tres" type="TileSet" id=1]
[ext_resource path="res://objects/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Level.gd" type="Script" id=3]
[ext_resource path="res://objects/Bird.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/imgs/Food.png" type="Texture" id=5]
[ext_resource path="res://objects/Food.gd" type="Script" id=6]
[ext_resource path="res://scenes/DialogSystem.tscn" type="PackedScene" id=7]
[ext_resource path="res://resources/sound/monplaisir-loyalty-freak-music-soundtrack.ogg" type="AudioStream" id=9]
[ext_resource path="res://scenes/SettingsMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 316.622, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 170.639 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 316.622, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 316.622, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 170.639 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 170.639 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 310.791, 22.7629 )

[sub_resource type="CircleShape2D" id=12]
radius = 37.475

[sub_resource type="DynamicFontData" id=8]
font_path = "res://resources/fonts/20832.ttf"

[sub_resource type="DynamicFont" id=9]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 8 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0784314, 0.0784314, 0.0784314, 0.54902 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="CircleShape2D" id=11]
radius = 7.24193

[node name="Level" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 65564, 0, 0, 65565, 0, 0, 65566, 0, 0, 65567, 0, 0, 65568, 0, 0, 65569, 0, 0, 65570, 0, 0, 65571, 0, 0, 65572, 0, 0, 65573, 0, 0, 65574, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 131103, 0, 0, 131104, 0, 0, 131105, 0, 0, 131106, 0, 0, 131107, 0, 0, 131108, 0, 0, 131109, 0, 0, 131110, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 14, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196638, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 196646, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 14, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 14, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 14, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 14, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 0, 262177, 0, 0, 262178, 0, 0, 262179, 0, 0, 262180, 0, 0, 262181, 0, 0, 262182, 0, 0, 327680, 8, 0, 327681, 8, 0, 327682, 8, 0, 327683, 8, 0, 327684, 8, 0, 327685, 8, 0, 327686, 8, 0, 327687, 8, 0, 327688, 8, 0, 327689, 8, 0, 327690, 8, 0, 327691, 8, 0, 327692, 8, 0, 327693, 8, 0, 327694, 8, 0, 327695, 8, 0, 327696, 8, 0, 327697, 8, 0, 327698, 8, 0, 327699, 8, 0, 327700, 8, 0, 327701, 8, 0, 327702, 8, 0, 327703, 8, 0, 327704, 8, 0, 327705, 8, 0, 327706, 8, 0, 327707, 8, 0, 327708, 8, 0, 327709, 8, 0, 327710, 8, 0, 327711, 8, 0, 327712, 8, 0, 327713, 8, 0, 327714, 8, 0, 327715, 8, 0, 327716, 8, 0, 327717, 8, 0, 327718, 8, 0, 393216, 8, 0, 393217, 8, 0, 393218, 8, 0, 393219, 8, 0, 393220, 8, 0, 393221, 8, 0, 393222, 8, 0, 393223, 8, 0, 393224, 8, 0, 393225, 8, 0, 393226, 8, 0, 393227, 8, 0, 393228, 8, 0, 393229, 8, 0, 393230, 8, 0, 393231, 8, 0, 393232, 8, 0, 393233, 8, 0, 393234, 8, 0, 393235, 8, 0, 393236, 8, 0, 393237, 8, 0, 393238, 8, 0, 393239, 8, 0, 393240, 8, 0, 393241, 8, 0, 393242, 8, 0, 393243, 8, 0, 393244, 8, 0, 393245, 8, 0, 393246, 8, 0, 393247, 8, 0, 393248, 8, 0, 393249, 8, 0, 393250, 8, 0, 393251, 8, 0, 393252, 8, 0, 393253, 8, 0, 393254, 8, 0, 458752, 8, 0, 458753, 8, 0, 458754, 8, 0, 458755, 8, 0, 458756, 8, 0, 458757, 8, 0, 458758, 8, 0, 458759, 8, 0, 458760, 8, 0, 458761, 8, 0, 458762, 8, 0, 458763, 8, 0, 458764, 8, 0, 458765, 8, 0, 458766, 8, 0, 458767, 8, 0, 458768, 8, 0, 458769, 8, 0, 458770, 8, 0, 458771, 8, 0, 458772, 8, 0, 458773, 8, 0, 458774, 8, 0, 458775, 8, 0, 458776, 8, 0, 458777, 8, 0, 458778, 8, 0, 458779, 8, 0, 458780, 8, 0, 458781, 8, 0, 458782, 8, 0, 458783, 8, 0, 458784, 8, 0, 458785, 8, 0, 458786, 8, 0, 458787, 8, 0, 458788, 8, 0, 458789, 8, 0, 458790, 8, 0, 524288, 8, 0, 524289, 8, 0, 524290, 8, 0, 524291, 8, 0, 524292, 8, 0, 524293, 8, 0, 524294, 8, 0, 524295, 8, 0, 524296, 8, 0, 524297, 8, 0, 524298, 8, 0, 524299, 8, 0, 524300, 8, 0, 524301, 8, 0, 524302, 8, 0, 524303, 8, 0, 524304, 8, 0, 524305, 8, 0, 524306, 8, 0, 524307, 8, 0, 524308, 8, 0, 524309, 8, 0, 524310, 8, 0, 524311, 8, 0, 524312, 8, 0, 524313, 8, 0, 524314, 8, 0, 524315, 8, 0, 524316, 8, 0, 524317, 8, 0, 524318, 8, 0, 524319, 8, 0, 524320, 8, 0, 524321, 8, 0, 524322, 8, 0, 524323, 8, 0, 524324, 8, 0, 524325, 8, 0, 524326, 8, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 14, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 14, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 14, 0, 589861, 0, 0, 589862, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 0, 0, 655390, 0, 0, 655391, 0, 0, 655392, 0, 0, 655393, 0, 0, 655394, 0, 0, 655395, 0, 0, 655396, 0, 0, 655397, 0, 0, 655398, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 720925, 0, 0, 720926, 0, 0, 720927, 0, 0, 720928, 0, 0, 720929, 0, 0, 720930, 0, 0, 720931, 0, 0, 720932, 0, 0, 720933, 0, 0, 720934, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, 0, 0, 786465, 0, 0, 786466, 0, 0, 786467, 0, 0, 786468, 0, 0, 786469, 0, 0, 786470, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, 0, 0, 852001, 0, 0, 852002, 0, 0, 852003, 0, 0, 852004, 0, 0, 852005, 0, 0, 852006, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0, 917529, 0, 0, 917530, 0, 0, 917531, 0, 0, 917532, 0, 0, 917533, 0, 0, 917534, 0, 0, 917535, 0, 0, 917536, 0, 0, 917537, 0, 0, 917538, 0, 0, 917539, 0, 0, 917540, 0, 0, 917541, 0, 0, 917542, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0, 983068, 0, 0, 983069, 0, 0, 983070, 0, 0, 983071, 0, 0, 983072, 0, 0, 983073, 0, 0, 983074, 0, 0, 983075, 0, 0, 983076, 0, 0, 983077, 0, 0, 983078, 0, 0, 1048576, 0, 0, 1048577, 0, 0, 1048578, 0, 0, 1048579, 0, 0, 1048580, 0, 0, 1048581, 0, 0, 1048582, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048590, 0, 0, 1048591, 0, 0, 1048592, 0, 0, 1048593, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048600, 0, 0, 1048601, 0, 0, 1048602, 0, 0, 1048603, 0, 0, 1048604, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1048608, 0, 0, 1048609, 0, 0, 1048610, 0, 0, 1048611, 0, 0, 1048612, 0, 0, 1048613, 0, 0, 1048614, 0, 0, 1114112, 0, 0, 1114113, 0, 0, 1114114, 0, 0, 1114115, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114127, 0, 0, 1114128, 0, 0, 1114129, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114136, 0, 0, 1114137, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1114144, 0, 0, 1114145, 0, 0, 1114146, 0, 0, 1114147, 0, 0, 1114148, 0, 0, 1114149, 0, 0, 1114150, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179652, 0, 0, 1179653, 0, 0, 1179654, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179672, 0, 0, 1179673, 0, 0, 1179674, 0, 0, 1179675, 0, 0, 1179676, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 0, 1179681, 0, 0, 1179682, 0, 0, 1179683, 0, 0, 1179684, 0, 0, 1179685, 0, 0, 1179686, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1245210, 0, 0, 1245211, 0, 0, 1245212, 0, 0, 1245213, 0, 0, 1245214, 0, 0, 1245215, 0, 0, 1245216, 0, 0, 1245217, 0, 0, 1245218, 0, 0, 1245219, 0, 0, 1245220, 0, 0, 1245221, 0, 0, 1245222, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Walls" type="TileMap" parent="."]
z_index = 11
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_y_sort = true
collision_layer = 4
collision_mask = 4
format = 1
tile_data = PoolIntArray( 1, 28, 0, 4, 18, 0, 5, 27, 0, 6, 10, 0, 11, 18, 0, 12, 27, 0, 18, 28, 0, 28, 18, 0, 29, 27, 0, 35, 28, 0, 65537, 9, 0, 65539, 19, 0, 65540, 20, 0, 65541, 25, 0, 65542, 26, 0, 65545, 28, 0, 65546, 19, 0, 65547, 20, 0, 65548, 25, 0, 65549, 26, 0, 65554, 9, 0, 65556, 10, 0, 65563, 19, 0, 65564, 20, 0, 65565, 25, 0, 65566, 26, 0, 65569, 10, 0, 65571, 9, 0, 131075, 21, 0, 131076, 22, 0, 131077, 23, 0, 131078, 24, 0, 131081, 9, 0, 131082, 21, 0, 131083, 22, 0, 131084, 23, 0, 131085, 24, 0, 131091, 12, 0, 131093, 28, 0, 131099, 21, 0, 131100, 22, 0, 131101, 23, 0, 131102, 24, 0, 196608, 10, 0, 196611, 5, 0, 196612, 3, 0, 196613, 2, 0, 196614, 6, 0, 196618, 5, 0, 196619, 4, 0, 196620, 2, 0, 196621, 6, 0, 196627, 29, 0, 196629, 9, 0, 196635, 5, 0, 196636, 3, 0, 196637, 2, 0, 196638, 6, 0, 524293, 18, 0, 524294, 27, 0, 524308, 18, 0, 524309, 27, 0, 524323, 18, 0, 524324, 27, 0, 589825, 28, 0, 589828, 19, 0, 589829, 20, 0, 589830, 25, 0, 589831, 26, 0, 589843, 19, 0, 589844, 20, 0, 589845, 25, 0, 589846, 26, 0, 589858, 19, 0, 589859, 20, 0, 589860, 25, 0, 589861, 26, 0, 655361, 9, 0, 655364, 21, 0, 655365, 22, 0, 655366, 23, 0, 655367, 24, 0, 655372, 28, 0, 655375, 10, 0, 655377, 28, 0, 655379, 21, 0, 655380, 22, 0, 655381, 23, 0, 655382, 24, 0, 655385, 28, 0, 655394, 21, 0, 655395, 22, 0, 655396, 23, 0, 655397, 24, 0, 720900, 5, 0, 720901, 16, 0, 720902, 16, 0, 720903, 6, 0, 720905, 10, 0, 720908, 9, 0, 720913, 9, 0, 720915, 5, 0, 720916, 16, 0, 720917, 16, 0, 720918, 6, 0, 720921, 9, 0, 720927, 28, 0, 720930, 5, 0, 720931, 16, 0, 720932, 16, 0, 720933, 6, 0, 786442, 28, 0, 786447, 28, 0, 786453, 10, 0, 786463, 9, 0, 851970, 10, 0, 851978, 9, 0, 851983, 9, 0, 851998, 10, 0, 852004, 28, 0, 917511, 28, 0, 917516, 28, 0, 917531, 28, 0, 917540, 9, 0, 983041, 28, 0, 983045, 10, 0, 983047, 9, 0, 983052, 9, 0, 983060, 28, 0, 983067, 9, 0, 1048577, 9, 0, 1048592, 10, 0, 1048596, 9, 0, 1048601, 10, 0, 1048611, 10, 0, 1114116, 28, 0, 1114122, 10, 0, 1114126, 28, 0, 1114143, 10, 0, 1114149, 28, 0, 1179652, 9, 0, 1179662, 9, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="YSort" type="YSort" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Villagers" type="YSort" parent="YSort"]
__meta__ = {
"_edit_lock_": true
}

[node name="Birds" type="YSort" parent="YSort"]
__meta__ = {
"_edit_lock_": true
}

[node name="Bird" parent="YSort/Birds" instance=ExtResource( 4 )]
position = Vector2( 80, 24 )

[node name="Bird2" parent="YSort/Birds" instance=ExtResource( 4 )]
position = Vector2( 96, 140 )

[node name="Bird3" parent="YSort/Birds" instance=ExtResource( 4 )]
position = Vector2( 193, 20 )

[node name="Bird4" parent="YSort/Birds" instance=ExtResource( 4 )]
position = Vector2( 336, 136 )

[node name="Bird5" parent="YSort/Birds" instance=ExtResource( 4 )]
position = Vector2( 464, 24 )

[node name="Bird6" parent="YSort/Birds" instance=ExtResource( 4 )]
position = Vector2( 576, 140 )

[node name="Food" type="Node2D" parent="YSort"]
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 311.325, 78.1296 )

[node name="Bounds" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="Bounds"]
collision_layer = 16
collision_mask = 16
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/StaticBody2D"]
position = Vector2( 309.543, -11.1118 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bounds/StaticBody2D"]
position = Vector2( 311.924, 330.973 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Bounds/StaticBody2D"]
position = Vector2( -10.3181, 156.359 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Bounds/StaticBody2D"]
position = Vector2( 634.167, 153.978 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="Bounds"]
collision_layer = 8
collision_mask = 8
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Area2D"]
position = Vector2( 309.543, -11.1118 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bounds/Area2D"]
position = Vector2( 311.924, 330.973 )
shape = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Bounds/Area2D"]
position = Vector2( -18.8857, 156.859 )
shape = SubResource( 5 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Bounds/Area2D"]
position = Vector2( 646.897, 153.978 )
shape = SubResource( 6 )

[node name="SpawnPoints" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="top_left" type="Position2D" parent="SpawnPoints"]
position = Vector2( 0.31498, 81.5799 )

[node name="botton_left" type="Position2D" parent="SpawnPoints"]
position = Vector2( 0.214745, 134.626 )

[node name="top_right" type="Position2D" parent="SpawnPoints"]
position = Vector2( 624.291, 80.9499 )

[node name="bottom_right" type="Position2D" parent="SpawnPoints"]
position = Vector2( 623.761, 135.512 )

[node name="Road" type="Area2D" parent="."]
position = Vector2( 312.487, 111.515 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Road"]
shape = SubResource( 7 )

[node name="WaterWell" type="Area2D" parent="."]
position = Vector2( 312.186, 52.385 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaterWell"]
shape = SubResource( 12 )

[node name="VillagersSpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]
pause_mode = 2

[node name="GUI" type="CanvasLayer" parent="."]

[node name="SatietyeProgress" type="ProgressBar" parent="GUI"]
margin_left = 4.0
margin_top = 4.0
margin_right = 260.0
margin_bottom = 20.0
max_value = 1.0
step = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Wasted" type="RichTextLabel" parent="GUI"]
visible = false
modulate = Color( 0.870588, 0.290196, 0.290196, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -246.236
margin_top = -158.218
margin_right = -50.2363
margin_bottom = -87.2182
custom_fonts/normal_font = SubResource( 9 )
text = " WASTED"
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Time" type="Panel" parent="GUI"]
margin_left = 300.0
margin_top = 4.0
margin_right = 340.0
margin_bottom = 18.0
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/Time"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 9.0
text = "8:00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="GUI/Time"]
wait_time = 1.5

[node name="Day" type="Panel" parent="GUI"]
visible = false
margin_left = 274.0
margin_top = 96.0
margin_right = 314.0
margin_bottom = 110.0
rect_scale = Vector2( 2, 2 )
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/Day"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 9.0
text = "Day 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogSystem" parent="GUI" instance=ExtResource( 7 )]
visible = false
anchor_right = 0.679
anchor_bottom = 0.669
margin_left = -20.0
margin_top = -20.0
margin_right = 288.16
margin_bottom = 191.84
rect_scale = Vector2( 0.7, 0.7 )

[node name="PauseMenu" type="Control" parent="GUI"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -320.0
margin_bottom = -320.0
rect_min_size = Vector2( 640, 320 )
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GUI/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -106.0
margin_right = 86.0
margin_bottom = 25.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Resume" type="Button" parent="GUI/PauseMenu/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -50.1102
margin_right = 79.0
margin_bottom = -30.1102
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="GUI/PauseMenu/Panel"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -50.1102
margin_right = 79.0
margin_bottom = -30.1102
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="GUI/PauseMenu/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.2929
margin_top = -9.09799
margin_right = 79.7071
margin_bottom = 10.902
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="GUI/PauseMenu/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 30.5
margin_right = 79.0
margin_bottom = 50.5
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" parent="GUI/PauseMenu" instance=ExtResource( 10 )]
visible = false
rect_scale = Vector2( 0.68, 0.68 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -30.0

[node name="Food" type="Node2D" parent="."]
position = Vector2( 288.247, 89.9389 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Food"]
texture = ExtResource( 5 )
hframes = 8
vframes = 8

[node name="Area2D" type="Area2D" parent="Food" groups=[
"food",
]]
collision_layer = 34
collision_mask = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="Food/Area2D"]
shape = SubResource( 11 )

[node name="Tween" type="Tween" parent="Food"]

[node name="Timer" type="Timer" parent="Food"]

[connection signal="body_entered" from="Bounds/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Road" to="." method="_on_Road_body_entered"]
[connection signal="body_exited" from="Road" to="." method="_on_Road_body_exited"]
[connection signal="body_entered" from="WaterWell" to="." method="_on_WaterWell_body_entered"]
[connection signal="body_exited" from="WaterWell" to="." method="_on_WaterWell_body_exited"]
[connection signal="timeout" from="VillagersSpawnTimer" to="." method="_on_VillagersSpawnTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="GUI/Time/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="GUI/PauseMenu/Panel/Resume" to="GUI/PauseMenu" method="_on_Resume_pressed"]
[connection signal="pressed" from="GUI/PauseMenu/Panel/Restart" to="GUI/PauseMenu" method="_on_Restart_pressed"]
[connection signal="pressed" from="GUI/PauseMenu/Panel/Settings" to="GUI/PauseMenu" method="_on_Settings_pressed"]
[connection signal="pressed" from="GUI/PauseMenu/Panel/Exit" to="GUI/PauseMenu" method="_on_Exit_pressed"]
[connection signal="body_entered" from="Food/Area2D" to="Food" method="_on_Area2D_body_entered"]
[connection signal="tween_all_completed" from="Food/Tween" to="Food" method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Food/Timer" to="Food" method="_on_Timer_timeout"]
